# ableton-pack-generator

./: .gitignore  README.md  pyproject.toml
configs/macos/: bbc-symphony-orchestra.toml  diva.toml  massive-x.toml  pigments.toml  repro-1.toml  repro-5.toml  synthmasterone.toml
packgen/: adg.py  cli.py  config.py  nksf.py  pack.py  scan.py
templates/: instrument_rack.adg.j2
