[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "packgen"
version = "0.1.1"
description = "Generate Ableton Live Custom Packs from VST3 NKSF presets"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "msgpack>=1.0",
]

[project.scripts]
packgen = "packgen.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["packgen"]
artifacts = ["templates/"]

[tool.hatch.build.targets.wheel.shared-data]
"templates" = "packgen/templates"
